update the themes doc

--- a/greenlife/index.html
+++ b/greenlife/index.html
@@ -138,8 +138,9 @@
                   <!-- nav-->
 
                   <small>
-                    <i>Doc Last Update</i>
-                    23/08/2023</small>
+                    <i>Doc Last Update:</i>
+                    <span class="update">-</span>
+                  </small>
                 </nav>
                 <!-- doc-menu-->
               </div>
@@ -155,10 +156,12 @@
                     <ul class="square-list">
                       <li>
                         <strong>Version:</strong>
-                        20230823-1.2.6</li>
+                        <span class="ver">-</span>
+                      </li>
                       <li>
                         <strong>Recent Update:</strong>
-                        23/08/2023</li>
+                        <span class="update">-</span>
+                      </li>
                       <li>
                         <strong>Release Date:</strong>
                         02/03/2017</li>
@@ -185,7 +188,7 @@
 
                     <p>
                       First of all, thanks a lot for purchasing our theme. We hope you will like the WordPress theme, and it would be great if you can spare a minute to rate it. Finally, If you need any support regarding our theme, please feel free to contact us via our profile
-                                                                                                                                                                                                                                                                                          page
+                                                                                                                                                                                                                                                                                                                                                                                  page
                       <a href="https://themeforest.net/user/essentialwebapps#contact" target="_blank">https://themeforest.net/user/essentialwebapps#contact</a>
                     </p>
                   </div>
@@ -195,7 +198,7 @@
                   <div class="section-block" id="requirements">
                     <h3 class="block-title">Requirements</h3>
                     <p>You need at least WordPress version 4.7+ installed for this theme to work properly. It is strongly recommended that you always use the latest stable version of WordPress to ensure all known bugs and security issues
-                                                                                                                                                                                                                                                                                          are fixed. Other requirements:</p>
+                                                                                                                                                                                                                                                                                                                                                                                  are fixed. Other requirements:</p>
                     <ul>
                       <li>PHP version 5.3 or greater.</li>
                       <li>MySQL version 5.0.15 or greater.</li>
@@ -355,7 +358,7 @@
                       <div class="col-md-12 col-12">
                         <h3 class="block-title">Child Theme Installation</h3>
                         <p>The Installation process of a child theme is similar to the parent WordPress theme. Please note that the A Child theme is often used by the developers who want to override/extend a theme's features or functionalities
-                                                                                                                                                                                                                                                                                                                                              without changing the parent theme's codes. You will get the child theme zip file inside the theme package.</p>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                      without changing the parent theme's codes. You will get the child theme zip file inside the theme package.</p>
 
                         <div class="doc-img-box text-left">
                           <a href="img/installation/child_theme/1.jpg" class="venobox">
@@ -392,7 +395,7 @@
                     <p>Usually, creating a website from the beginning is a time-consuming and challenging process. The theme comes with the most popular
                       <strong>'One Click Demo Installation'</strong>
                       feature, which allows you to get the site
-                                                                                                                                                                                                                                                                                          ready precisely like the theme demo within a few minutes.</p>
+                                                                                                                                                                                                                                                                                                                                                                                  ready precisely like the theme demo within a few minutes.</p>
 
                     <p>
                       <strong class="steps">Few Important Notes:</strong>
@@ -477,7 +480,7 @@
                     comes with a significant amount of options to customize the theme layouts. Go to the
                     <em>Restore Options</em>
                     from the left panel. You will get all the premium options to customize the theme according
-                                                                                                                                                                                                                                                                to your specifications.</p>
+                                                                                                                                                                                                                                                                                                                                                to your specifications.</p>
 
                   <div id="setup_favicon" class="section-block">
                     <div class="row">
@@ -1009,7 +1012,7 @@
                         <p>
                           <strong class="steps">Step 02:</strong>
                           You can set body background, fonts, text size, link colors according to your requirements. Also, you can manage heading(h1,h2,h3,h4,h5,h6) color and font size. You can
-                                                                                                                                                                                                                                                                                                                                              set theme sidebar(widget) background and fonts from body styling section.</p>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                      set theme sidebar(widget) background and fonts from body styling section.</p>
 
                         <p>
                           <strong class="steps">Step 03:</strong>
@@ -1316,7 +1319,7 @@
                   <p>Check the different part creation/editing process (Home, Pages- About Us, Contact Us Etc.)</p>
                   <p>The following part of the documentation consider that you already read (if not then it is strongly recommend that you read them first) the
                     <em>documentation of Visual Composer</em>. It is available in the documentation
-                                                                                                                                                                                                                                                                                      folder and can able to
+                                                                                                                                                                                                                                                                                                                                                                              folder and can able to
                     <em>use drag n drop page builder</em>
                     etc.</p>
                 </section>
@@ -1351,7 +1354,7 @@
                     <em>One Page Header1</em>
                     or
                     <em>One Page Header2</em>,
-                                                                                                                                                                                                                                                                                      from the dropdown</p>
+                                                                                                                                                                                                                                                                                                                                                                              from the dropdown</p>
                   . You can edit the
                   <em>Header Styling</em>
                   by going to
@@ -1380,7 +1383,7 @@
                     <em>Row</em>
                     you can add different elements by drag n drop Visual Composer</p>
                   <p>6. In the One Page's different Row's we added different VC Elements<em>Wiz Button, Wiz Heading, Wiz Highlights, Wiz Slider, Wiz Team, Wiz Testimonial etc</em>, you can also add different Visual Composer elements as well
-                                                                                                                                                                                                                                                                in other different
+                                                                                                                                                                                                                                                                                                                                                in other different
                     <em>Row's</em>
                     according to your needs</p>
                   <div class="doc-img-box text-left">
@@ -2040,7 +2043,7 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <p>
-                          <b>Upgrading from 1.2.3 to 1.2.4</b>
+                          <b>Upgrading to version <span class="ver">1.3.3</span></b>
                         </p>
 
                         <ul>
@@ -2052,6 +2055,8 @@
 
                   <div class="section-block" id="changelog">
                     <h3 class="block-title">Change Log</h3>
+
+                    <div id="dynamic_log"></div>
 
                     <div>
                       <p><b>2023, August 21 - v 1.2.6</b></p>
@@ -2241,6 +2246,7 @@
     <!-- Main Javascript -->
     <script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/all.min.js"></script>
     <script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/main.js"></script>
-    <script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/products.js"></script>
+    <script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/products.js"></script>    
+    <script type="text/javascript" src="assets/js/changelog.js"></script>
     </body>
 </html>
