--- a/petapalozza/index.html
+++ b/petapalozza/index.html
@@ -138,7 +138,8 @@
 
                   <small>
                     <i>Doc Last Update:</i>
-                    22/08/2023</small>
+                    <span class="update">-</span>
+                  </small>
                 </nav>
                 <!-- doc-menu-->
               </div>
@@ -153,10 +154,12 @@
                     <ul class="square-list">
                       <li>
                         <strong>Version:</strong>
-                        20230722-1.2.3</li>
+                        <span class="ver">-</span>
+                      </li>
                       <li>
                         <strong>Recent Update:</strong>
-                        22/08/2023</li>
+                        <span class="update">-</span>
+                      </li>
                       <li>
                         <strong>Release Date:</strong>
                         20/11/2017</li>
@@ -1348,7 +1351,7 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <p>
-                          <b>Upgrading from 1.2.2 to 1.2.3</b>
+                          <b>Upgrading to version <span class="ver">1.3.3</span></b>
                         </p>
 
                         <ul>
@@ -1364,6 +1367,8 @@
                     <h3 class="block-title">Change Log</h3>
 
                     <div class="section-block">
+
+                      <div id="dynamic_log"></div>
 
                       <div>
                         <p><b>2023, August, 22 - v 1.2.3</b></p>
@@ -1606,5 +1611,6 @@
     <script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/all.min.js"></script>
     <script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/main.js"></script>
     <script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/products.js"></script>
+    <script type="text/javascript" src="assets/js/changelog.js"></script>
   </body>
 </html>
