Update the dynamism 1.2.9 documentation

--- a/dynamism/index.html
+++ b/dynamism/index.html
@@ -277,8 +277,6 @@
                       <li>One Page Navigator. (Required)</li>
                       <li>Redux Framework. (Required)</li>
                       <li>The Events Calender. (Required).</li>
-                      <li>Shortcodes Ultimate. (Required).</li>
-                      <li>Latest Tweets Widget. (Required).</li>
                       <li>Cause Manager. (Required).</li>
                       <li>Custom Events Calendar Shortcode. (Required).</li>
                       <li>Seamless Donations. (Required).</li>
@@ -3294,6 +3292,7 @@
                 </section>
                 <!-- doc-section-->
               </div>
+              <!-- content-inner-->
             </div>
             <!-- doc-content-->
           </div>
@@ -3302,21 +3301,31 @@
         <!-- container-->
       </div>
       <!-- doc-wrapper-->
-    </body>
-  </body>
-</html></div><!-- page-wrapper--><footer id="footer" class="footer text-center">
-<div class="container">
-  <div class="row">
-    <div class="col-6 text-left">
-      <span>Copyright &copy; 2023 -
-        <a href="https://bluewindlab.net" target="_blank" class="text-info">BlueWindLab</a>. All Rights Reserved.</span>
     </div>
-    <div
-      class="col-6 text-right">
-      <!--This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
-      <span>Designed by
-        <a href="https://themes.3rdwavemedia.com/" target="_blank" class="text-info">Xiaoying Riley</a>.</span>
-    </div>
-  </div>
-</div>
-<!-- container--></footer><!-- footer--><a id="backTop">Back To Top</a><!-- Main Javascript --><script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/all.min.js"></script><script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/main.js"></script><script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/products.js"></script><script type="text/javascript" src="assets/js/changelog.js"></script></body></html>
+    <!-- page-wrapper-->
+
+    <footer id="footer" class="footer text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-6 text-left">
+            <span>Copyright &copy; 2023 - <a href="https://bluewindlab.net" target="_blank" class="text-info">BlueWindLab</a>. All Rights Reserved.</span>
+          </div>
+          <div class="col-6 text-right">
+            <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
+            <span>Designed by <a href="https://themes.3rdwavemedia.com/" target="_blank" class="text-info">Xiaoying Riley</a>.</span>
+          </div>
+        </div>
+      </div>
+      <!-- container-->
+    </footer>
+    <!-- footer-->
+
+    <a id="backTop">Back To Top</a>
+    <!-- Main Javascript -->
+    <script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/all.min.js"></script>
+    <script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/main.js"></script>
+    <script type="text/javascript" src="https://xenioushk.github.io/bwl-static-assets/doc-assets/js/products.js"></script>
+    <script type="text/javascript" src="assets/js/changelog.js"></script>
+
+</body>
+</html>
