update the sharai khana 1.3.7 doc

--- a/sharai_khana/index.html
+++ b/sharai_khana/index.html
@@ -62,6 +62,7 @@
                     <a class="nav-link scrollto" href="#customize_menu_color">Customize Menu Color</a>
                     <a class="nav-link scrollto" href="#add_copyright_text">Footer & Copyright Text</a>
                     <a class="nav-link scrollto" href="#typography_background_heading_widget_styles">Typography & Widget styles</a>
+                    <a class="nav-link child-nav-link scrollto" href="#blog_post_styling">Blog Post Styling</a>
                     <a class="nav-link scrollto" href="#default_header_styling">Default Header Styling</a>
                     <a class="nav-link scrollto" href="#bottom_widget_area_styling">Footer/Bottom Widget Styling</a>
                   </nav>
@@ -942,6 +943,40 @@
                         <div class="doc-img-box">
                           <a href="img/05_11.jpg" class="venobox">
                             <img class="img-fluid" src="img/05_11.jpg" alt="doc_img"/>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Blog Post Styling -->
+
+                  <div id="blog_post_styling" class="section-block">
+                    <div class="row">
+                      <div class="col-md-12 col-12">
+                        <h3 class="block-title">Setup Theme Blog Post styles</h3>
+
+                        <p>
+                          <strong class="steps">Step 01:</strong>
+                          From Admin menu, navigate to
+                          <em>Sharai Khana Options >> Styling Options >> Blog Post Styling
+                          </em>
+                          tab.</p>
+
+                        <p>
+                          <strong class="steps">Step 02:</strong>
+                          You can set Post background, Sticky post background, Meta Icon color, Display Read more button options according to your requirements. 
+                        </p>
+
+                        <p>
+                          <strong class="steps">Step 03:</strong>
+                          Finally, click
+                          <strong>Save Changes</strong>
+                          button to save the settings.</p>
+
+                        <div class="doc-img-box">
+                          <a href="img/options_panel/styling_options/blog_styling.png" class="venobox">
+                            <img class="img-fluid" src="img/options_panel/styling_options/blog_styling.png" alt="doc_img"/>
                           </a>
                         </div>
                       </div>
