update the senior care documentation

--- a/srcare/index.html
+++ b/srcare/index.html
@@ -170,7 +170,7 @@
                       <li>
                         <strong>
                           <strong>Developed By:</strong>
-                          <a href="1.envato.market/xenioushk" target="_blank">MAHBUB ALAM KHAN</a>
+                          <a href="https://1.envato.market/xenioushk" target="_blank">MAHBUB ALAM KHAN</a>
                           &
                           <a href="https://themeforest.net/user/essentialwebapps" target="_blank">AFM JAMAL UDDIN</a>
                         </li>
