updated petitions_manager plugin doc

--- a/appeal/petitions_manager/index.html
+++ b/appeal/petitions_manager/index.html
@@ -95,7 +95,8 @@
 
                   <small>
                     <i>Doc Last Update:</i>
-                    13/02/2023</small>
+                    <span class="update">-</span>
+                  </small>
 
                 </nav>
                 <!-- doc-menu-->
@@ -1641,26 +1642,9 @@ function cb_bptm_sender_no_reply_email( $content ) {
 
               <div class="row">
 
+                
                 <div class="col-md-12 col-12">
-
-                  <p>
-                    <b>
-                      2020, January, 17 - v 1.0.8</b>
-                    <br/><b>- Added:</b>
-                    Users sign verification option.
-                    <br/><b>- Added:</b>
-                    Manual sign insert option.
-                    <br/><b>- Added:</b>
-                    Customizable email template option.
-                    <br/><b>- Added:</b>
-                    Email default text filter option.
-                    <br/><b>- Updated:</b>
-                    Plugin Options Panel.
-                    <br/><b>- Updated:</b>
-                    Plugin language file.
-                    <br/><b>- Updated:</b>
-                    Plugin documentation.
-                  </p>
+                  <div id="dynamic_log"></div>
 
                   <p>
                     <b>
