--- a/appeal/petitions_manager/index.html
+++ b/appeal/petitions_manager/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Petitions Manager WordPress Plugin Documentation-(V-1.0.7)</title>
+    <title>Petitions Manager WordPress Plugin Documentation</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Petitions Manager WordPress Plugin Documentation">
-    <meta name="author" content="Md Mahbub Alam Khan">
+    <meta name="author" content="Mahbub Alam Khan">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://xenioushk.github.io/bwl-static-assets/doc-assets/css/all.min.css"/>
     <link rel="stylesheet" href="https://xenioushk.github.io/bwl-static-assets/doc-assets/css/styles.css"/>
@@ -117,10 +117,11 @@
                     <ul>
                       <li>
                         <strong>Plugin Version:</strong>
-                        1.0.7</li>
-                      <li>
-                        <strong>Plugin Last Update:</strong>
-                        15/01/2020</li>
+                        <span class="ver">-</span>
+                        <li>
+                          <strong>Recent Update:</strong>
+                          <span class="update">-</span>
+                        </li>
                       <li>
                         <strong>Plugin Create Date:</strong>
                         22/09/2016</li>
@@ -618,7 +619,7 @@ $shorcode_string .= '[bpsff cc="2" ft="captcha" fn="captcha" fr=1 fer="' . __('I
 $shorcode_string .= '[bpsff rs=0 cc="1" ft="textarea" fn="bpt_user_msg" fp="' . __('Optional Message', 'bwl_ptmn') . '" sts="' . $opt_msg_status . '"/]';
                                     </code></pre>
 
-                    <div class="callout-danger" style="padding: 12px 24px 6px; margin-bottom: 24px;">
+                    <div class="callout-info" style="padding: 12px 24px 6px; margin-bottom: 24px;">
                       <div class="content">
                         <h4 class="callout-title">Important Note:</h4>
 
