updated the petition manager plugin, remove extra files

--- a/appeal/petitions_manager/index.html
+++ b/appeal/petitions_manager/index.html
@@ -58,7 +58,10 @@
                     <a class="nav-link scrollto d-none" href="#force_disable_download_files">Force Disable Download Files</a>
                   </nav>
 
-                  <a class="nav-link scrollto" href="#download_report">Petition Report</a>
+                  <a class="nav-link scrollto" href="#download_report" title="Petition report">Petition report</a>
+                  <nav class="doc-sub-menu nav flex-column">
+                    <a class="nav-link scrollto" href="#remove_petition_data" title="Remove petition data">Remove petition data</a>
+                  </nav>
 
                   <a class="nav-link scrollto" href="#plugin_shortcodes_section">Plugin Shortcodes</a>
 
@@ -506,6 +509,55 @@
                           <strong>CSV</strong>
                           format.
                         </p>
+                      </div>
+                    </div>
+
+                  </div>
+
+                </section>
+
+
+                <section id="remove_petition_data" class="doc-section">
+
+                  <div class="section-block">
+                    <div class="row">
+                      <div class="col-md-12 col-12">
+                        <h3 class="block-title">Remove petition data</h3>
+                        <p>
+                          <strong class="steps">Step 01</strong>
+                          Navigate to
+                          <strong>Petitions >> Petition Report</strong>
+                          Section. Next, select the petition from
+                          <em>Petitions</em>
+                          drop down list.
+                        </p>
+                        <div class="doc-img-box">
+                          <a href="img/download_report_01.jpg" class="venobox">
+                            <img class="img-fluid" src="img/download_report_01.jpg" alt="doc_img"/>
+                          </a>
+                        </div>
+
+                        <p>
+                          <strong class="steps">Step 02</strong>
+                          Now, click on the 
+                          <strong>Reset Data</strong>
+                           button. 
+                        </p>
+                        <div class="doc-img-box">
+                          <a href="img/remove_petition_data.jpg" class="venobox">
+                            <img class="img-fluid" src="img/remove_petition_data.jpg" alt="doc_img"/>
+                          </a>
+                        </div>
+
+                        <p>
+                          <strong class="steps">Step 03</strong>
+                          You will see a confirmation window. Click the <em>Ok</em> button to reset the data.
+                        </p>
+                        <div class="doc-img-box">
+                          <a href="img/confirm_reset_petition.jpg" class="venobox">
+                            <img class="img-fluid" src="img/confirm_reset_petition.jpg" alt="doc_img"/>
+                          </a>
+                        </div>
                       </div>
                     </div>
 
