Updated the srcare documentation

--- a/srcare/index.html
+++ b/srcare/index.html
@@ -2654,17 +2654,17 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <div class="jumbotron">
-                          <p>To update theme you can follow the steps-</p>
+                          <p>To update the theme, you can follow the steps:</p>
                           <ul>
                             <li>
-                              Download <strong><a href="https://wordpress.org/plugins/easy-theme-and-plugin-upgrades/" target="_blank">Easy Theme and Plugin Upgrades</a></strong> plugin and install it in your site.
+                              Download the <strong><a href="https://wordpress.org/plugins/easy-theme-and-plugin-upgrades/" target="_blank">Easy Theme and Plugin Upgrades</a></strong> plugin and install it ib your site.
                             </li>
                             <li>Choose the theme file (e.g., senior-care.zip) and click Install Now button.</li>
                             <li>It will automatically install the new theme and backup the old theme and give you a link to download the backup.</li>
                             <li>Make sure that your theme is active.</li>
                           </ul>
 
-                          <p>Before updating the theme, we recommend you to make backup of your modified files. Also deactivate the current version before uploading the new theme file.</p>
+                          <p>Before updating the theme, we recommend you make backups of your modified files. Also deactivate the current version before uploading the new theme file.</p>
 
                           <p>
                             <a class="btn btn-cta btn-primary venobox" href="https://youtu.be/O2Wfg3tq4R8" data-vbtype="video" data-autoplay="true"> <i class="fas fa-play"></i> Check Video Tutorial </a>
