Updated the srcare documentation

--- a/srcare/index.html
+++ b/srcare/index.html
@@ -2657,9 +2657,10 @@
                           <p>To update the theme, you can follow the steps:</p>
                           <ul>
                             <li>
-                              Download the <strong><a href="https://wordpress.org/plugins/easy-theme-and-plugin-upgrades/" target="_blank">Easy Theme and Plugin Upgrades</a></strong> plugin and install it ib your site.
+                              Download the <strong><a href="https://wordpress.org/plugins/easy-theme-and-plugin-upgrades/" target="_blank">Easy Theme and Plugin Upgrades</a></strong> plugin and 
+                              install it on your site.
                             </li>
-                            <li>Choose the theme file (e.g., senior-care.zip) and click Install Now button.</li>
+                            <li>Choose the theme file <strong>(e.g., senior-care.zip)</strong> and click Install Now button.</li>
                             <li>It will automatically install the new theme and backup the old theme and give you a link to download the backup.</li>
                             <li>Make sure that your theme is active.</li>
                           </ul>
