Added WooCommerce options panel documentation.

--- a/kdesk/index.html
+++ b/kdesk/index.html
@@ -71,6 +71,7 @@
                   <a class="nav-link scrollto" href="#typography_background_heading_widget_styles">Styling Options</a>
                   <a class="nav-link scrollto" href="#default_header_styling">Default Header Styling</a>
                   <a class="nav-link scrollto" href="#bottom_widget_area_styling">Bottom Widget Area Styling</a>
+                  <a class="nav-link scrollto" href="#woocommerce_settings">WooCommerce Settings</a>
                 </nav>
                 <!-- nav-->
 
@@ -1122,7 +1123,66 @@
                     </div>
                   </div>
                 </div>
-                <!-- section-block-->
+
+                <!-- WooCommerce Settings -->
+
+                <div id="woocommerce_settings" class="section-block">
+                  <div class="row">
+                    <div class="col-md-12 col-12">
+                      <h3 class="block-title">Disable Cart Button</h3>
+                      <p class="text-right">
+                        <small>@since: 1.4.5 | @update: 1.4.5</small>
+                      </p>
+
+                      <p>
+                        <strong class="steps">Step 01:</strong>
+                        From Admin menu, navigate to
+                        <em>Knowledgedesk Options >> WooCommerce
+                        </em>
+                        tab.
+                      </p>
+
+                      <p>
+                        <strong class="steps">Step 02:</strong>
+                        From here, you can <em>enable/disable</em> the header cart button. If you install and activate
+                        the
+                        WooCommerce plugin, the theme automatically displays the cart icon on the header.
+                      </p>
+
+                      <p>
+                        <strong class="steps">Step 03:</strong>
+                        Finally, click
+                        <strong>Save Changes</strong>
+                        button to save the settings.
+                      </p>
+
+                      <div class="doc-img-box">
+                        <a href="img/options_panel/woocommerce/disable_cart_btn.jpg" class="venobox"
+                          title="Disable Knowledgedesk WordPress theme cart button.">
+                          <img class="img-fluid" src="img/options_panel/woocommerce/disable_cart_btn.jpg"
+                            alt="Disable Knowledgedesk WordPress theme cart button.">
+                        </a>
+                      </div>
+                      <p>
+                        <strong>OUTPUT:
+                        </strong>
+                      </p>
+                      <div class="doc-img-box">
+                        <a href="img/options_panel/woocommerce/cart_btn.jpg" class="venobox"
+                          title="Knowledgedesk WordPress theme header cart button.">
+                          <img class="img-fluid" src="img/options_panel/woocommerce/cart_btn.jpg"
+                            alt="Knowledgedesk WordPress theme header cart button." />
+                        </a>
+                      </div>
+
+
+
+
+
+                    </div>
+                  </div>
+                </div>
+
               </section>
               <!-- doc-section-->
 
