Updated kdesk theme options panel copyright doucmentation.

--- a/kdesk/index.html
+++ b/kdesk/index.html
@@ -67,7 +67,7 @@
                   <a class="nav-link scrollto" href="#setup_site_logo">Setup Site Logo</a>
                   <a class="nav-link scrollto" href="#tool_bar_customization">Tool Bar Customization</a>
                   <a class="nav-link scrollto" href="#customize_menu_color">Customize Menu Color</a>
-                  <a class="nav-link scrollto" href="#add_copyright_text">Add Copyright Text</a>
+                  <a class="nav-link scrollto" href="#add_copyright_text">Copyright Text</a>
                   <a class="nav-link scrollto" href="#typography_background_heading_widget_styles">Styling Options</a>
                   <a class="nav-link scrollto" href="#default_header_styling">Default Header Styling</a>
                   <a class="nav-link scrollto" href="#bottom_widget_area_styling">Bottom Widget Area Styling</a>
@@ -960,7 +960,11 @@
                 <div id="add_copyright_text" class="section-block">
                   <div class="row">
                     <div class="col-md-12 col-12">
-                      <h3 class="block-title">Add Copyright Text</h3>
+                      <h3 class="block-title">Copyright Text</h3>
+
+                      <p class="text-right">
+                        <small>@since: 1.0.0 | @update: 1.1.0</small>
+                      </p>
                       <p>
                         <strong class="steps">Step 01:</strong>
                         From Admin menu, navigate to
@@ -983,14 +987,17 @@
                       </p>
 
                       <div class="doc-img-box">
-                        <a href="img/05_9.jpg" class="venobox">
-                          <img class="img-fluid" src="img/05_9.jpg" alt="doc_img" />
+                        <a href="img/options_panel/copyright/05_9.jpg" class="venobox"
+                          title="Setup Knowledgedesk WordPress theme footer copyright text.">
+                          <img class="img-fluid" src="img/options_panel/copyright/05_9.jpg"
+                            alt="Setup Knowledgedesk WordPress theme footer copyright text.">
                         </a>
                       </div>
                       <p>
                         <strong>OUTPUT:
                         </strong>
-                        <br /><br /><img src="img/05_10.jpg" alt="doc_img" class="img-fluid" />
+                        <br /><br /><img src="img/options_panel/copyright/05_10.jpg"
+                          alt="Knowledgedesk WordPress theme footer copyright text" class="img-fluid">
                       </p>
                     </div>
                   </div>
