updated kdesk doc.

--- a/kdesk/index.html
+++ b/kdesk/index.html
@@ -2757,10 +2757,11 @@
                   <div class="row">
                     <div class="col-md-12 col-12">
                       <h3 class="block-title">WooCommerce Store</h3>
-                      <p><strong class="steps">Step 01:</strong> After installing the <em>WooCommerce</em> plugin during
-                        the theme installation you'll have <em>all the pages (Cart, Store, My Account, Checkout)</em> in
-                        the left panel <em>Appearnce >> Menus</em>. Going to left panel <em>Appearnce >> Menus</em> add
-                        these item to the <em>main menu</em>.</p>
+                      <p><strong class="steps">Step 01:</strong> After installing the WooCommerce plugin during the
+                        theme installation, you'll have all the pages (Cart, Store, My Account, Checkout) in the left
+                        panel, <em>Appearance > Menus</em>.  By navigating to the <em>Appearance > Menus</em> section on
+                        the left panel,
+                        you can add these items to the main menu..</p>
 
                       <div class="doc-img-box">
                         <a href="img/woo_13_1.jpg" class="venobox">
