🔥 Updated: Sharai Khana docs class section.

--- a/sharai_khana/index.html
+++ b/sharai_khana/index.html
@@ -1361,14 +1361,82 @@
                           <b>Black Background (80%) Opacity Box:</b>
                           <i>block-black-80-bg</i>
                         </li>
+
                         <li>
-                          <b>1px Border In Box:</b>
-                          <i>theme-border-size-1</i>
+                          <p><b>Border Width:</b></p>
+                          <ul>
+                            <li>
+                              <b>Border (1px):</b>
+                              <i>theme-border-size-1</i>
+                            </li>
+
+                            <li>
+                              <b>Border (2px):</b>
+                              <i>theme-border-size-2</i>
+                            </li>
+
+                            <li>
+                              <b>Border (3px):</b>
+                              <i>theme-border-size-3</i>
+                            </li>
+
+                            <li>
+                              <b>Border (4px):</b>
+                              <i>theme-border-size-4</i>
+                            </li>
+
+                          </ul>
                         </li>
+
                         <li>
-                          <b>Semi Rounded Border In Box:</b>
-                          <i>theme-semi-rounded-box</i>
+                          <p><b>Border Radius:</b></p>
+                          <ul>
+
+                            <li>
+                              <b>Rounded (2px):</b>
+                              <i>theme-rounded-box-2</i>
+                            </li>
+
+                            <li>
+                              <b>Rounded (3px):</b>
+                              <i>theme-rounded-box-4</i>
+                            </li>
+
+                            <li>
+                              <b>Rounded (4px):</b>
+                              <i>theme-rounded-box-4</i>
+                            </li>
+
+                            <li>
+                              <b>Rounded (5px):</b>
+                              <i>theme-rounded-box-5</i>
+                            </li>
+
+                            <li>
+                              <b>Rounded (6px):</b>
+                              <i>theme-rounded-box-6</i>
+                            </li>
+
+                            <li>
+                              <b>Rounded (7px):</b>
+                              <i>theme-rounded-box-7</i>
+                            </li>
+                            <li>
+                              <b>Rounded (8px):</b>
+                              <i>theme-rounded-box-8</i>
+                            </li>
+
+                            <li>
+                              <b>Semi Rounded (6px):</b>
+                              <i>theme-semi-rounded-box</i>
+                            </li>
+                            <li>
+                              <b>Full Rounded (100%):</b>
+                              <i>theme-full-rounded-box</i>
+                            </li>
+                          </ul>
                         </li>
+
                         <li>
                           <b>About Square Dot List:</b>
                           <i>sk-about-details</i>
